--- a/example/accordion/package.json
+++ b/example/accordion/package.json
@@ -1,8 +1,9 @@
 {
   "name": "accordion-block",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Example Block that utilizes blockkit",
+  "main": "src/index.js",
+  "private": true,
   "scripts": {
     "build": "wp-scripts build",
     "check-engines": "wp-scripts check-engines",
@@ -18,13 +19,15 @@
     "test:e2e": "wp-scripts test-e2e",
     "test:unit": "wp-scripts test-unit-js",
     "wp-env": "wp-env"
-
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Fabian Kägy",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "@wordpress/env": "^2.0.0",
     "@wordpress/scripts": "^12.2.0"
+  },
+  "devDependencies": {
+    "blockkit": "file:../../"
   }
 }
